--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
   "appId": "com.example.app",
   "appName": "Musify",
-  "webDir": "/app/templates/index.html"
+  "webDir": "../templates/index.html"
 }
